--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>KMA Blockchain </h1>
+<div class="container-fluid">
+    <h1>KMA Blockchain </h1>
+</div>
+
 
 {% endblock %}
