--- a/frontend/templates/transactions.html
+++ b/frontend/templates/transactions.html
@@ -4,30 +4,31 @@
 <div class="alert alert-warning" role="alert">Blockchain network has no pending transaction</div>
 {% else %}
 
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <th>TxID</th>
-            <th>Timestamp</th>
-            <th>Author</th>
-            <th>Document Hash</th>
-            <th>S3 URL</th>
-            <th>Title</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for tx in pending_transactions %}
-        <tr>
-            <td>{{ tx['txid'] }}</td>
-            <td>{{ tx['timestamp'] }}</td>
-            <td>{{ tx['author'] }}</td>
-            <td>{{ tx['doc_hash'] }}</td>
-            <td>{{ tx['s3_url'] }}</td>
-            <td>{{ tx['title'] }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-
+<div class="container-fluid">
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>TxID</th>
+                <th>Timestamp</th>
+                <th>Author</th>
+                <th>Document Hash</th>
+                <th>S3 URL</th>
+                <th>Title</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for tx in pending_transactions %}
+            <tr>
+                <td>{{ tx['txid'] }}</td>
+                <td>{{ tx['timestamp'] }}</td>
+                <td>{{ tx['author'] }}</td>
+                <td>{{ tx['doc_hash'] }}</td>
+                <td>{{ tx['s3_url'] }}</td>
+                <td>{{ tx['title'] }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endif %}
 {% endblock %}
