--- a/frontend/templates/explore.html
+++ b/frontend/templates/explore.html
@@ -17,7 +17,7 @@
                 {% for b in blockchain %}
                 <tr>
                     <td width="200">{{ b['timestamp'] }}</td>
-                    <td width="220">{{ b['txid'] }}</td>
+                    <td width="220"><a href="/details-tx?txid={{ b['txid'] }}">{{ b['txid'] }}</a></td>
                     <td width="20">{{ b['index'] }}</td>
                     <td width="200" style="word-break: break-all">{{ b['hash'] }}</td>
                     <td width="50">{{ b['nonce'] }}</td>
