--- a/frontend/templates/sign.html
+++ b/frontend/templates/sign.html
@@ -3,32 +3,44 @@
 <div class="container-fluid"> 
     <form class="form-horizontal" method="POST" enctype="multipart/form-data">
         <div class="form-group">
-          <label class="control-label col-sm-2" for="author">Author:</label>
-          <div class="col-sm-10">
-            <input class="form-control" name="author" id="author" placeholder="Enter author of this document">
-          </div>
-          <label class="control-label col-sm-2" for="title">Title:</label>
-          <div class="col-sm-10">
-            <input class="form-control" name="title" id="title" placeholder="Enter title of this document">
-          </div>
-          <label class="control-label col-sm-2" for="description">Description:</label>
-          <div class="col-sm-10">
-            <input class="form-control" name="description" id="description" placeholder="Enter description of this document">
-          </div>
-          <label class="control-label col-sm-2" for="private_key">Your private key to sign this document</label>
-          <div class="col-sm-10">
-            <input name="private_key" type="file" class="form-control-file" id="private_key">
-          </div>
-          <label class="control-label col-sm-2" for="document">Document for upload</label>
-          <div class="col-sm-10">
-            <input  name='file' type="file" class="form-control-file" id="document" onchange="processSign(this)">
-          </div>
-          <div class="col-sm-10">
+          
+            <label class="control-label col-sm-2" for="author">Author:</label>
+            <div class="col-sm-10">
+                <input class="form-control" name="author" id="author" placeholder="Enter author of this document">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="title">Title:</label>
+            <div class="col-sm-10">
+                <input class="form-control" name="title" id="title" placeholder="Enter title of this document">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="description">Description:</label>
+            <div class="col-sm-10">
+                <input class="form-control" name="description" id="description" placeholder="Enter description of this document">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="private_key">Your private key to sign this document</label>
+            <div class="col-sm-10">
+                <input class="form-control" name="private_key" type="file" class="file" id="private_key">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="document">Document for upload</label>
+            <div class="col-sm-10">
+                <input  class="form-control" name='document' type="file" class="file" id="document" onchange="processSign(this)">
+            </div>
+        </div>
+          <!-- <div class="col-sm-10"> -->
             <input type="hidden" id="doc_hash" name="doc_hash" value="">
-          </div>
-          <div class="col-sm-10">
+          <!-- </div> -->
+          <!-- <div class="col-sm-10"> -->
             <input type="hidden" id="signature" name="signature" value="">
-          </div>
+          <!-- </div> -->
+        <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
             <button id="submit" class="btn btn-default" disabled>Submit</button>
           </div>
