--- a/frontend/templates/details-tx.html
+++ b/frontend/templates/details-tx.html
@@ -42,7 +42,11 @@
             <tr>
                 <td>S3 URL</td>
                 <td align="left"> {{ tx['data']['s3_url'] }} </td>                
-            </tr>            
+            </tr> 
+            <tr>
+                <td>Signature</td>
+                <td style="word-break: break-all" align="left">{{ tx['data']['signature'] }} </td>
+            </tr>        
         </table>
     </div>
 </div>
